--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -508,7 +508,7 @@ to {
     display: none;
 }
 .page-title {
-    background: url(../images/page-title.jpg) center center/cover no-repeat local;
+    background: url(../images/slider/1.1.jpg) center center/cover no-repeat local;
     width: 100%;
     height: 500px;
     text-align: center;
@@ -2792,7 +2792,8 @@ to {
     padding: 70px 0;
 }
 /*  */
-}.partner-section:before {
+}
+.partner-section:before {
     content: "";
     background-color:rgba(29, 29, 29, .95) ;
     width: 100%;
@@ -4152,7 +4153,7 @@ to {
 .mission-vision-section .grid:hover .overlay, .mission-vision-section .mission-vision-grids>.grid:nth-child(2) .overlay {
     opacity: 1;
 }
-.mission-vision-section .grid:hover h3, .mission-vision-section .grid:hover p, .mission-vision-section .mission-vision-grids>.grid:nth-child(2) h3, .mission-vision-section .mission-vision-grids>.grid:nth-child(2) p {
+.mission-vision-section , .mission-vision-section .mission-vision-grids h3, .mission-vision-section .mission-vision-grids p {
     color: #fff;
 }
 .about-pg-target-area {
